• fixed menu z-index in contrast to social media icons on mobile view

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -67,6 +67,7 @@
     
     .page-title {
         position: absolute;
+        z-index: 1;
         top: 0;
         left: 385px;
         width: 200%;
